--- a/src/contents/_compatibility.scss
+++ b/src/contents/_compatibility.scss
@@ -4,4 +4,28 @@
     margin-inline-end: 8px !important; // Original: 6px
     width: 20px !important; // ESR(102): 16px, Nightly(116): 27px
   }
+
+  #pane-experimental-search-results-header,
+  #pane-experimental-subtitle {
+    min-height: 27px !important; // Original: 30px
+    padding-inline-start: 35px !important;
+  }
+
+  // Align & Separator #722
+  #firefoxExperimentalCategory {
+    &:not([hidden="true"]) {
+      display: inline-block;
+    }
+
+    > label {
+      float: left;
+    }
+    > hbox {
+      transform: translateY(5px);
+    }
+  }
+  #pane-experimental-featureGates > html|p[data-l10n-id="pane-experimental-description2"] {
+    border-bottom: 1px solid var(--in-content-border-color);
+    padding-bottom: 1.5em;
+  }
 }
